Moved math functions to PNNL Omics Regresion Updated thermo reader with a proxy so we can cache feature data for spectral Alignment Integrated Degan's LCMSWarp port

--- a/src/MultiAlignCore/MultiAlignCore.csproj
+++ b/src/MultiAlignCore/MultiAlignCore.csproj
@@ -256,6 +256,7 @@
     <Compile Include="IO\Features\UmcAdoDAO.cs" />
     <Compile Include="IO\Clusters\UMCClusterAbundanceSumCrossTabWriter.cs" />
     <Compile Include="IO\Clusters\UMCClusterExporterFactory.cs" />
+    <Compile Include="IO\RawData\CachedFeatureSpectraProvider.cs" />
     <Compile Include="IO\RawData\ScanOutOfRangeException.cs" />
     <Compile Include="IO\SingletonDataProviders.cs" />
     <Compile Include="IO\StatusEventArgs.cs" />
