--- a/src/Test/MultiAlignTestSuite/MultiAlignTestSuite.csproj
+++ b/src/Test/MultiAlignTestSuite/MultiAlignTestSuite.csproj
@@ -144,10 +144,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Algorithms\Alignment\LCMSWarp\LcmsWarpAlignmentTests.cs" />
-    <Compile Include="Algorithms\Alignment\LCMSWarp\LCMSWarpTest1.cs" />
-    <Compile Include="Algorithms\Alignment\LCMSWarp\MtdbFileReaderTest.cs" />
+    <Compile Include="Algorithms\Alignment\LCMSWarp\LCMSWarpTest.cs" />
     <Compile Include="Algorithms\CallisterClusters\CompareClusters.cs" />
+    <Compile Include="Algorithms\FeatureFinding\FeatureFindingTest.cs" />
+    <Compile Include="TestBase.cs" />
+    <Compile Include="TestPathSingleton.cs" />
     <Compile Include="Algorithms\MsMsClustering.cs" />
     <Compile Include="Algorithms\SpectralProcessing\SpectralAlignmentTests.cs" />
     <Compile Include="Algorithms\SpectralProcessing\SpectralComparisonTests.cs" />
@@ -170,7 +171,6 @@
     <Compile Include="Papers\Alignment\SpectralCacheUtility.cs" />
     <Compile Include="Papers\Alignment\SSM\BaseSpectralAlignmentTest.cs" />
     <Compile Include="Papers\Alignment\SSM\TestSpectralLinking.cs" />
-    <Compile Include="Algorithms\UMCAlignment.cs" />
     <Compile Include="Algorithms\UMCClustering.cs" />
     <Compile Include="IO\Databases\DatabaseIoTests.cs" />
     <Compile Include="IO\UMCClusterIO.cs" />
@@ -227,6 +227,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
