--- a/src/Applications/MultiAlign/app.config
+++ b/src/Applications/MultiAlign/app.config
@@ -37,6 +37,10 @@
         <assemblyIdentity name="OxyPlot" publicKeyToken="638079a8f0bd61e9" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2014.1.299.1" newVersion="2014.1.299.1" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.92.0" newVersion="1.0.92.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
