--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\..\..\..\..\MTBD\trunk\MTDBCreatorTestSuite\packages.config" />
-  <repository path="..\..\..\..\..\MTBD\trunk\MTDBFramework\packages.config" />
-  <repository path="..\..\..\..\..\MTBD\trunk\Regressor\packages.config" />
+  <repository path="..\..\..\..\..\MTDB\trunk\MTDBCreatorTestSuite\packages.config" />
+  <repository path="..\..\..\..\..\MTDB\trunk\MTDBFramework\packages.config" />
   <repository path="..\..\..\..\..\PNNLOmics\development\trunk\PNNLOmics.UnitTests\packages.config" />
   <repository path="..\..\..\..\..\PNNLOmics\development\trunk\PNNLOmics\packages.config" />
   <repository path="..\..\..\..\..\PNNLOmics\development\trunk\PNNLOmicsViz\PNNLOmicsViz\packages.config" />
