--- a/src/Applications/MultiAlign/MultiAlign.csproj
+++ b/src/Applications/MultiAlign/MultiAlign.csproj
@@ -647,11 +647,11 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\..\PNNLOmics\development\trunk\PNNLOmicsViz\PNNLOmicsViz\PNNLOmicsViz.csproj">
+    <ProjectReference Include="..\..\..\..\..\OMICS\development\PNNLOmicsViz\PNNLOmicsViz\PNNLOmicsViz.csproj">
       <Project>{6f933e2a-aea8-43e1-a8e1-5f9207704b21}</Project>
       <Name>PNNLOmicsViz</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\..\..\PNNLOmics\development\trunk\PNNLOmics\PNNLOmics.csproj">
+    <ProjectReference Include="..\..\..\..\..\OMICS\development\PNNLOmics\PNNLOmics.csproj">
       <Project>{8a934dc1-3418-449f-adf6-9962499f49b2}</Project>
       <Name>PNNLOmics</Name>
     </ProjectReference>
