--- a/src/GridApps/MultiAlignSTACRunner/MultiAlignSTACRunner.csproj
+++ b/src/GridApps/MultiAlignSTACRunner/MultiAlignSTACRunner.csproj
@@ -71,7 +71,7 @@
     <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\..\PNNLOmics\development\trunk\PNNLOmics\PNNLOmics.csproj">
+    <ProjectReference Include="..\..\..\..\..\OMICS\development\PNNLOmics\PNNLOmics.csproj">
       <Project>{8A934DC1-3418-449F-ADF6-9962499F49B2}</Project>
       <Name>PNNLOmics</Name>
     </ProjectReference>
