--- a/src/Test/TestCore/TestCore/TestCore.csproj
+++ b/src/Test/TestCore/TestCore/TestCore.csproj
@@ -44,7 +44,7 @@
     <Compile Include="TestPathSingleton.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\..\..\PNNLOmics\development\trunk\PNNLOmics\PNNLOmics.csproj">
+    <ProjectReference Include="..\..\..\..\..\..\OMICS\development\PNNLOmics\PNNLOmics.csproj">
       <Project>{8a934dc1-3418-449f-adf6-9962499f49b2}</Project>
       <Name>PNNLOmics</Name>
     </ProjectReference>
