--- a/src/GridApps/MultiAlignSTACRunner/MultiAlignSTACRunner.csproj
+++ b/src/GridApps/MultiAlignSTACRunner/MultiAlignSTACRunner.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -71,10 +71,7 @@
     <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
-<<<<<<< HEAD
-    <ProjectReference Include="..\..\..\..\..\OMICS\development\PNNLOmics\PNNLOmics.csproj">
-      <Project>{8A934DC1-3418-449F-ADF6-9962499F49B2}</Project>
-=======
+
     <ProjectReference Include="..\..\..\..\PNNL-Omics\PNNLOmicsIO\PNNLOmicsIO.csproj">
       <Project>{20d49543-cd31-44d2-8403-f045b3fb363d}</Project>
       <Name>PNNLOmicsIO</Name>
@@ -85,7 +82,6 @@
     </ProjectReference>
     <ProjectReference Include="..\..\..\..\PNNL-Omics\PNNLOmics\PNNLOmics.csproj">
       <Project>{8a934dc1-3418-449f-adf6-9962499f49b2}</Project>
->>>>>>> fixed some reference problems
       <Name>PNNLOmics</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Library\MultiAlignCore\MultiAlignCore.csproj">
