--- a/src/Applications/MultiAlignConsole/app.config
+++ b/src/Applications/MultiAlignConsole/app.config
@@ -1,13 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup useLegacyV2RuntimeActivationPolicy="true">
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
   </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="OxyPlot" publicKeyToken="638079a8f0bd61e9" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2014.1.296.1" newVersion="2014.1.296.1" />
+        <assemblyIdentity name="OxyPlot" publicKeyToken="638079a8f0bd61e9" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-2014.1.296.1" newVersion="2014.1.296.1"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.0.93.0" newVersion="1.0.93.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
