Fix reference bug in MtdbCreatorDatabaseLoader Update MultiAlignTestSuite to reference System.Data.SQLite

--- a/src/Test/MultiAlignTestSuite/packages.config
+++ b/src/Test/MultiAlignTestSuite/packages.config
@@ -6,4 +6,5 @@
   <package id="OxyPlot.WindowsForms" version="2014.1.303.1" targetFramework="net45" />
   <package id="OxyPlot.Wpf" version="2014.1.303.1" targetFramework="net45" />
   <package id="Svg" version="1.6.1" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.94.0" targetFramework="net45" />
 </packages>
