--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\..\..\MTDB-Creator\trunk\MTDBCreatorTestSuite\packages.config" />
   <repository path="..\..\..\MTDB-Creator\trunk\MTDBFramework\packages.config" />
+  <repository path="..\..\..\PNNL-Omics\PNNLOmics.UnitTests\packages.config" />
   <repository path="..\..\..\PNNL-Omics\PNNLOmics\packages.config" />
   <repository path="..\..\..\PNNL-Omics\PNNLOmicsViz\PNNLOmicsViz\packages.config" />
   <repository path="..\Applications\MultiAlign\packages.config" />
