--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,6 @@ src/*/*/bin/
 src/*/*/obj/
 src/*/*/*/obj/
 src/*/*/*/bin/
-/src/packages/System.Data.SQLite.Core.1.0.93.0
+src/packages/System.Data.SQLite.Core.1.0.93.0
+data/QC_Shew_DeconTools/
+src/packages/*/
