ParentSpectraFinder now caches SpectraProvider instances to avoid re-opening instrument data files repeatedly Assorted bounds checking

--- a/src/Applications/MultiAlign/MultiAlign.csproj
+++ b/src/Applications/MultiAlign/MultiAlign.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{6EC23CCC-4F36-47BF-B997-F0A5727822A5}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MultiAlign</RootNamespace>
     <AssemblyName>MultiAlign</AssemblyName>
