--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -8,6 +8,7 @@
   <repository path="..\Applications\MultiAlign\packages.config" />
   <repository path="..\Applications\MultiAlignConsole\packages.config" />
   <repository path="..\Library\MultiAlignCore\packages.config" />
+  <repository path="..\MultiAlignRogue\packages.config" />
   <repository path="..\Test\AlignmentPaperTestSuite\AlignmentPaperTestSuite\packages.config" />
   <repository path="..\Test\MultiAlignTestSuite\packages.config" />
 </repositories>
