Feature finding is now in MultiAlign FeatureFindingSettingsViewModel.

--- a/src/MultiAlignRogue/MultiAlignRogue.csproj
+++ b/src/MultiAlignRogue/MultiAlignRogue.csproj
@@ -131,17 +131,20 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AlignmentSettingsViewModel.cs" />
     <Compile Include="AlignmentView.xaml.cs">
       <DependentUpon>AlignmentView.xaml</DependentUpon>
     </Compile>
     <Compile Include="AlignmentViewFactory.cs" />
     <Compile Include="AlignmentViewModel.cs" />
+    <Compile Include="DatasetViewModel.cs" />
     <Compile Include="DMS\DmsLookupUtility.cs" />
     <Compile Include="DMS\DmsDatasetViewModel.cs" />
     <Compile Include="DMS\DmsLookupView.xaml.cs">
       <DependentUpon>DmsLookupView.xaml</DependentUpon>
     </Compile>
     <Compile Include="DMS\DmsLookupViewModel.cs" />
+    <Compile Include="FeatureFindingSettingsViewModel.cs" />
     <Compile Include="IAlignmentWindowFactory.cs" />
     <Compile Include="IFeatureWindowFactory.cs" />
     <Compile Include="LCMSFeatureAligner.cs" />
